Fix overflow

--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -901,6 +901,10 @@ select {
   border-color: rgb(229 231 235 / var(--tw-divide-opacity));
 }
 
+.overflow-hidden {
+  overflow: hidden;
+}
+
 .truncate {
   overflow: hidden;
   text-overflow: ellipsis;
